Cloth brush performance regression in 2.91.0 #83201

Closed
opened 2020-11-29 22:15:39 +01:00 by The5 · 7 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.30

Blender Version
Broken version: 2.91.0, branch: master, commit date: 2020-11-25 08:34, hash: 0f45cab862
Worked: 2.90.1

Short description of error
The performance of the cloth brush seems to have regressed from 2.90.1 to 2.91.0.

Exact steps for others to reproduce the error

  • Subdivide the default cube to 1.5mil vertices (likely dependent on your systems capabilities) and apply.
  • Go to sculpt mode and select the cloth brush.
  • Draw a stroke and compare performance.

See the linked screen capture below, left is 2.90.1 right is 2.91.0.
https://cdn.discordapp.com/attachments/300197734374309891/782706927884959784/Blender_FactorySettings_ClothBrush.gif

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.30 **Blender Version** Broken version: 2.91.0, branch: master, commit date: 2020-11-25 08:34, hash: `0f45cab862` Worked: 2.90.1 **Short description of error** The performance of the cloth brush seems to have regressed from 2.90.1 to 2.91.0. **Exact steps for others to reproduce the error** * Subdivide the default cube to 1.5mil vertices (likely dependent on your systems capabilities) and apply. * Go to sculpt mode and select the cloth brush. * Draw a stroke and compare performance. See the linked screen capture below, left is 2.90.1 right is 2.91.0. https://cdn.discordapp.com/attachments/300197734374309891/782706927884959784/Blender_FactorySettings_ClothBrush.gif
Author

Added subscriber: @The5

Added subscriber: @The5

This issue was referenced by c9de65679b

This issue was referenced by c9de65679bb0905e7f689b83931c9be9a8abfa02

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I am not sure if I can reproduce, but I will confirm if there is fix patch.

I am not sure if I can reproduce, but I will confirm if there is fix patch.
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2020-12-15 20:23:04 +01:00
Author

Thank you for tending to it @PabloDobarro !

Thank you for tending to it @PabloDobarro !
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83201
No description provided.